--- a/src/main/resources/templates/svend-dashboard.html
+++ b/src/main/resources/templates/svend-dashboard.html
@@ -16,6 +16,7 @@
         <li><a th:href="@{/svend/projects}">Projekter</a></li>
         <li><a th:href="@{/svend/calculator}">Beregner</a></li>
         <li><a th:href="@{/svend/orders}">Bestillinger</a></li>
+        <li><a th:href="@{/svend/worklogs}">Mine timer</a></li>
         <li><a th:href="@{/svend/settings}">Indstillinger</a></li>
         <li>
           <form th:action="@{/logout}" method="post" style="margin: 0;">
