--- a/src/main/resources/templates/admin-dashboard.html
+++ b/src/main/resources/templates/admin-dashboard.html
@@ -16,6 +16,7 @@
         <li><a th:href="@{/admin/projects}">Projekter</a></li>
         <li><a th:href="@{/admin/employees}">Medarbejdere</a></li>
         <li><a th:href="@{/admin/orders}">Bestillinger</a></li>
+        <li><a th:href="@{/admin/worklogs}">Timer</a></li>
         <li><a th:href="@{/admin/settings}">Indstillinger</a></li>
         <li>
           <form th:action="@{/logout}" method="post" style="margin: 0;">
