--- a/src/main/resources/templates/admin/admin-dashboard.html
+++ b/src/main/resources/templates/admin/admin-dashboard.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Admin Dashboard | Workday</title>
-  <link rel="stylesheet" th:href="@{/css/admin.css}">
+  <link rel="stylesheet" th:href="@{/css/admin/admin.css}">
 </head>
 
 <body>
