--- a/src/main/resources/templates/admin/edit-project.html
+++ b/src/main/resources/templates/admin/edit-project.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Rediger Projekt | Workday</title>
-  <link rel="stylesheet" th:href="@{/css/admin.css}">
+  <link rel="stylesheet" th:href="@{/css/admin/admin.css}">
   <style>
     .form-container {
       max-width: 600px;
