--- a/src/main/resources/templates/admin/employees.html
+++ b/src/main/resources/templates/admin/employees.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Medarbejdere | Workday</title>
-  <link rel="stylesheet" th:href="@{/css/admin.css}">
+  <link rel="stylesheet" th:href="@{/css/admin/admin.css}">
 </head>
 <body>
 <div class="dashboard-wrapper">
