--- a/src/main/resources/templates/admin/edit-employee-hours.html
+++ b/src/main/resources/templates/admin/edit-employee-hours.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Rediger Arbejdstimer | Workday</title>
-  <link rel="stylesheet" th:href="@{/css/admin.css}">
+  <link rel="stylesheet" th:href="@{/css/admin/admin.css}">
   <style>
     .form-container {
       max-width: 500px;
