--- a/src/main/resources/templates/admin/settings.html
+++ b/src/main/resources/templates/admin/settings.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Indstillinger | Workday</title>
-  <link rel="stylesheet" th:href="@{/css/admin.css}">
+  <link rel="stylesheet" th:href="@{/css/admin/admin.css}">
   <style>
     .settings-container {
       display: grid;
