--- a/src/main/resources/templates/components/profile-settings.html
+++ b/src/main/resources/templates/components/profile-settings.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Profil | Workday</title>
-    <link rel="stylesheet" th:href="@{/css/admin.css}">
+    <link rel="stylesheet" th:href="@{/css/admin/admin.css}">
     <style>
         .profile-container {
             max-width: 600px;
