--- a/src/main/resources/templates/layout/welcome.html
+++ b/src/main/resources/templates/layout/welcome.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Velkommen</title>
-    <link rel="stylesheet" th:href="@{/css/welcome.css}">
+    <link rel="stylesheet" th:href="@{/css/common/welcome.css}">
 </head>
 <body>
 <div class="welcome-container">
