lærling. sygmelding ,kørseltillæg, ferieønsker og frokost pause

--- a/src/main/resources/templates/admin/admin-dashboard.html
+++ b/src/main/resources/templates/admin/admin-dashboard.html
@@ -17,6 +17,7 @@
         <li><a th:href="@{/admin/employees}">Medarbejdere</a></li>
         <li><a th:href="@{/admin/orders}">Bestillinger</a></li>
         <li><a th:href="@{/admin/worklogs}">Timer</a></li>
+        <li><a th:href="@{/admin/vacation}">Ferieønsker</a></li>
         <li><a th:href="@{/admin/settings}">Indstillinger</a></li>
         <li>
           <form th:action="@{/logout}" method="post" style="margin: 0;">
