--- a/src/main/resources/templates/user/svend-dashboard.html
+++ b/src/main/resources/templates/user/svend-dashboard.html
@@ -17,6 +17,10 @@
         <li><a th:href="@{/svend/calculator}">Beregner</a></li>
         <li><a th:href="@{/svend/orders}">Bestillinger</a></li>
         <li><a th:href="@{/svend/worklogs}">Mine timer</a></li>
+        <li><a th:href="@{/svend/time/sick-leave}">Sygemelding</a></li>
+        <li><a th:href="@{/svend/time/vacation}">Ferieønsker</a></li>
+        <li><a th:href="@{/svend/time/travel}">Kørseltillæg</a></li>
+        <li><a th:href="@{/svend/time/lunch}">Frokostpause</a></li>
         <li><a th:href="@{/svend/settings}">Indstillinger</a></li>
         <li>
           <form th:action="@{/logout}" method="post" style="margin: 0;">
