--- a/src/main/resources/templates/admin/vacation-requests.html
+++ b/src/main/resources/templates/admin/vacation-requests.html
@@ -16,6 +16,7 @@
         <li><a th:href="@{/admin/orders}"><span></span>Bestillinger</a></li>
         <li><a th:href="@{/admin/worklogs}"><span></span>Timer</a></li>
         <li><a href="#" class="active"><span></span>Ferieønsker</a></li>
+        <li><a th:href="@{/admin/sick-leave}"><span></span>Sygemeldinger</a></li>
         <li><a th:href="@{/admin/settings}"><span></span>Indstillinger</a></li>
         <li>
           <form th:action="@{/logout}" method="post" style="margin: 0;">
