--- a/src/main/resources/templates/admin/projects.html
+++ b/src/main/resources/templates/admin/projects.html
@@ -10,10 +10,14 @@
   <nav class="sidebar">
     <h2>Workday</h2>
     <ul>
-      <li><a th:href="@{/admin/dashboard}"><span></span>Oversigt</a></li>
-      <li><a href="#" class="active"><span></span>Projekter</a></li>
-      <li><a th:href="@{/admin/employees}"><span></span>Medarbejdere</a></li>
-      <li><a th:href="@{/admin/settings}"><span></span>Indstillinger</a></li>
+      <li><a th:href="@{/admin/dashboard}"><span><svg viewBox="0 0 24 24"><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></svg></span>Oversigt</a></li>
+      <li><a href="#" class="active"><span><svg viewBox="0 0 24 24"><path d="M19 3h-4.18C14.4 1.84 13.3 1 12 1c-1.3 0-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm2 14H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z"/></svg></span>Projekter</a></li>
+      <li><a th:href="@{/admin/employees}"><span><svg viewBox="0 0 24 24"><path d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"/></svg></span>Medarbejdere</a></li>
+      <li><a th:href="@{/admin/orders}"><span><svg viewBox="0 0 24 24"><path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-5 14H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z"/></svg></span>Bestillinger</a></li>
+      <li><a th:href="@{/admin/worklogs}"><span><svg viewBox="0 0 24 24"><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"/></svg></span>Timer</a></li>
+      <li><a th:href="@{/admin/vacation}"><span><svg viewBox="0 0 24 24"><path d="M12.5 6.9c1.78 0 3.22 1.44 3.22 3.22 0 1.78-1.44 3.22-3.22 3.22-1.78 0-3.22-1.44-3.22-3.22 0-1.78 1.44-3.22 3.22-3.22m0-1.9C9.79 5 7.5 7.29 7.5 10.12c0 2.83 2.29 5.12 5 5.12s5-2.29 5-5.12C17.5 7.29 15.21 5 12.5 5zm-5.5 6.5c0-1.1.9-2 2-2s2 .9 2 2-.9 2-2 2-2-.9-2-2zm11 0c0-1.1.9-2 2-2s2 .9 2 2-.9 2-2 2-2-.9-2-2zm-5.5 0c0-1.1.9-2 2-2s2 .9 2 2-.9 2-2 2-2-.9-2-2z"/></svg></span>Ferieønsker</a></li>
+      <li><a th:href="@{/admin/sick-leave}"><span><svg viewBox="0 0 24 24"><path d="M19.36 2.72L20.78 4.14l-1.06 1.06L18.3 3.78l-1.42 1.42-1.06-1.06 1.42-1.42-1.42-1.42 1.06-1.06 1.42 1.42zm-4.24 0L14.9 1.3l-1.06 1.06 1.42 1.42-1.42 1.42 1.06 1.06 1.42-1.42 1.42 1.42 1.06-1.06-1.42-1.42zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm-1-13h2v6h-2zm0 8h2v2h-2z"/></svg></span>Sygemeldinger</a></li>
+      <li><a th:href="@{/admin/settings}"><span><svg viewBox="0 0 24 24"><path d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94L14.4 2.81c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.07.62-.07.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61l-2.01-1.58zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z"/></svg></span>Indstillinger</a></li>
       <li><a th:href="@{/logout}" class="logout"><span></span>Log ud</a></li>
     </ul>
   </nav>
