--- a/src/main/resources/templates/user/worklogs.html
+++ b/src/main/resources/templates/user/worklogs.html
@@ -81,12 +81,16 @@
     <nav class="sidebar">
       <h2>Workday</h2>
       <ul>
-        <li><a th:href="@{/svend/dashboard}">Oversigt</a></li>
-        <li><a th:href="@{/svend/projects}">Projekter</a></li>
-        <li><a th:href="@{/svend/calculator}">Beregner</a></li>
-        <li><a th:href="@{/svend/orders}">Bestillinger</a></li>
-        <li><a th:href="@{/svend/worklogs}" class="active">Mine timer</a></li>
-        <li><a th:href="@{/svend/settings}">Indstillinger</a></li>
+      <li><a th:href="@{/svend/dashboard}"><span><svg viewBox="0 0 24 24"><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></svg></span>Oversigt</a></li>
+      <li><a th:href="@{/svend/projects}"><span><svg viewBox="0 0 24 24"><path d="M19 3h-4.18C14.4 1.84 13.3 1 12 1c-1.3 0-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm2 14H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z"/></svg></span>Projekter</a></li>
+      <li><a th:href="@{/svend/calculator}"><span><svg viewBox="0 0 24 24"><path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"/></svg></span>Beregner</a></li>
+      <li><a th:href="@{/svend/orders}"><span><svg viewBox="0 0 24 24"><path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-5 14H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z"/></svg></span>Bestillinger</a></li>
+      <li><a th:href="@{/svend/worklogs}" class="active"><span><svg viewBox="0 0 24 24"><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"/></svg></span>Mine timer</a></li>
+      <li><a th:href="@{/svend/time/sick-leave}"><span><svg viewBox="0 0 24 24"><path d="M19.36 2.72L20.78 4.14l-1.06 1.06L18.3 3.78l-1.42 1.42-1.06-1.06 1.42-1.42-1.42-1.42 1.06-1.06 1.42 1.42zm-4.24 0L14.9 1.3l-1.06 1.06 1.42 1.42-1.42 1.42 1.06 1.06 1.42-1.42 1.42 1.42 1.06-1.06-1.42-1.42zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm-1-13h2v6h-2zm0 8h2v2h-2z"/></svg></span>Sygemelding</a></li>
+      <li><a th:href="@{/svend/time/vacation}"><span><svg viewBox="0 0 24 24"><path d="M12.5 6.9c1.78 0 3.22 1.44 3.22 3.22 0 1.78-1.44 3.22-3.22 3.22-1.78 0-3.22-1.44-3.22-3.22 0-1.78 1.44-3.22 3.22-3.22m0-1.9C9.79 5 7.5 7.29 7.5 10.12c0 2.83 2.29 5.12 5 5.12s5-2.29 5-5.12C17.5 7.29 15.21 5 12.5 5zm-5.5 6.5c0-1.1.9-2 2-2s2 .9 2 2-.9 2-2 2-2-.9-2-2zm11 0c0-1.1.9-2 2-2s2 .9 2 2-.9 2-2 2-2-.9-2-2zm-5.5 0c0-1.1.9-2 2-2s2 .9 2 2-.9 2-2 2-2-.9-2-2z"/></svg></span>Ferieønsker</a></li>
+      <li><a th:href="@{/svend/time/travel}"><span><svg viewBox="0 0 24 24"><path d="M20.57 14.86L22 13.43 20.57 12 17 15.57 8.43 7 12 3.43 10.57 2 9.14 3.43 7.71 2 5.57 4.14 4.14 2.71 2.71 4.14l1.43 1.43L2 7.71l1.43 1.43L2 10.57 3.43 12 7 8.43 15.57 17 12 20.57 13.43 22l1.43-1.43L16.29 22l2.14-2.14 1.43 1.43 1.43-1.43-1.43-1.43L22 16.29l-1.43-1.43z"/></svg></span>Kørseltillæg</a></li>
+      <li><a th:href="@{/svend/time/lunch}"><span><svg viewBox="0 0 24 24"><path d="M8.1 13.34l2.83-2.83L3.91 3.5c-1.56 1.56-1.56 4.09 0 5.66l4.19 4.18zm6.78-1.81c1.53.71 3.68.21 5.27-1.38 1.91-1.91 2.28-4.65.81-6.12-1.46-1.46-4.2-1.1-6.12.81-1.59 1.59-2.09 3.74-1.38 5.27L3.7 19.87l1.41 1.41L12 14.41l6.88 6.88 1.41-1.41L13.41 13l1.47-1.47z"/></svg></span>Frokostpause</a></li>
+      <li><a th:href="@{/svend/settings}"><span><svg viewBox="0 0 24 24"><path d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94L14.4 2.81c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.07.62-.07.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61l-2.01-1.58zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z"/></svg></span>Indstillinger</a></li>
         <li>
           <form th:action="@{/logout}" method="post" style="margin: 0;">
             <input th:if="${_csrf != null}" type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
